// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LINE meal Flex templates > builds the confirm card 1`] = `
{
  "altText": "サラダチキンとおにぎりを記録しますか？",
  "contents": {
    "body": {
      "contents": [
        {
          "size": "xl",
          "text": "サラダチキンとおにぎり",
          "type": "text",
          "weight": "bold",
          "wrap": true,
        },
        {
          "contents": [
            {
              "color": "#F97316",
              "flex": 0,
              "size": "xxl",
              "text": "420 kcal",
              "type": "text",
              "weight": "bold",
            },
          ],
          "layout": "baseline",
          "spacing": "sm",
          "type": "box",
        },
        {
          "color": "#374151",
          "size": "sm",
          "text": "P 28g / F 6g / C 58g",
          "type": "text",
          "wrap": true,
        },
        {
          "contents": [
            {
              "color": "#6B7280",
              "flex": 2,
              "size": "sm",
              "text": "食事タイプ",
              "type": "text",
            },
            {
              "flex": 3,
              "size": "sm",
              "text": "昼食",
              "type": "text",
              "weight": "bold",
            },
          ],
          "layout": "horizontal",
          "spacing": "sm",
          "type": "box",
        },
      ],
      "layout": "vertical",
      "spacing": "md",
      "type": "box",
    },
    "footer": {
      "contents": [
        {
          "contents": [
            {
              "action": {
                "data": "action=save_meal&sid=sid-test&type=breakfast",
                "label": "朝で記録",
                "type": "postback",
              },
              "height": "sm",
              "style": "secondary",
              "type": "button",
            },
            {
              "action": {
                "data": "action=save_meal&sid=sid-test&type=lunch",
                "label": "昼で記録",
                "type": "postback",
              },
              "color": "#10B981",
              "height": "sm",
              "style": "primary",
              "type": "button",
            },
          ],
          "layout": "horizontal",
          "spacing": "xs",
          "type": "box",
        },
        {
          "contents": [
            {
              "action": {
                "data": "action=save_meal&sid=sid-test&type=dinner",
                "label": "夕で記録",
                "type": "postback",
              },
              "height": "sm",
              "style": "secondary",
              "type": "button",
            },
            {
              "action": {
                "data": "action=save_meal&sid=sid-test&type=snack",
                "label": "間食で記録",
                "type": "postback",
              },
              "height": "sm",
              "style": "secondary",
              "type": "button",
            },
          ],
          "layout": "horizontal",
          "spacing": "xs",
          "type": "box",
        },
        {
          "action": {
            "data": "action=edit_meal&sid=sid-test",
            "label": "✏️ 修正する",
            "type": "postback",
          },
          "style": "secondary",
          "type": "button",
        },
        {
          "action": {
            "data": "action=cancel_meal&sid=sid-test",
            "label": "❌ やめる",
            "type": "postback",
          },
          "style": "link",
          "type": "button",
        },
      ],
      "layout": "vertical",
      "spacing": "sm",
      "type": "box",
    },
    "header": {
      "backgroundColor": "#111827",
      "contents": [
        {
          "color": "#FFFFFF",
          "size": "lg",
          "text": "この内容で記録しますか？",
          "type": "text",
          "weight": "bold",
        },
        {
          "color": "#D1D5DB",
          "margin": "sm",
          "size": "sm",
          "text": "食事タイプのボタンを押すと、そのタイプで記録します✨ 内容が違っていたら「修正する」からどうぞ！",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "paddingAll": "16px",
      "type": "box",
    },
    "size": "mega",
    "type": "bubble",
  },
  "type": "flex",
}
`;

exports[`LINE meal Flex templates > builds the daily summary card 1`] = `
{
  "altText": "今日の栄養サマリー: 1250 / 2000kcal",
  "contents": {
    "body": {
      "contents": [
        {
          "contents": [
            {
              "color": "#6B7280",
              "flex": 4,
              "gravity": "bottom",
              "size": "sm",
              "text": "カロリー",
              "type": "text",
            },
            {
              "align": "end",
              "color": "#F97316",
              "flex": 6,
              "size": "lg",
              "text": "1250 / 2000kcal",
              "type": "text",
              "weight": "bold",
            },
          ],
          "layout": "horizontal",
          "type": "box",
        },
        {
          "backgroundColor": "#EDF2F7",
          "contents": [
            {
              "backgroundColor": "#10B981",
              "contents": [
                {
                  "type": "filler",
                },
              ],
              "cornerRadius": "4px",
              "height": "8px",
              "layout": "vertical",
              "type": "box",
              "width": "63%",
            },
          ],
          "cornerRadius": "4px",
          "height": "8px",
          "layout": "vertical",
          "margin": "sm",
          "type": "box",
        },
        {
          "color": "#6B7280",
          "margin": "sm",
          "size": "xs",
          "text": "残り 750kcal 食べられます🍽️",
          "type": "text",
        },
        {
          "margin": "lg",
          "type": "separator",
        },
        {
          "contents": [
            {
              "contents": [
                {
                  "color": "#6B7280",
                  "flex": 5,
                  "size": "sm",
                  "text": "タンパク質 P",
                  "type": "text",
                },
                {
                  "align": "end",
                  "color": "#374151",
                  "flex": 5,
                  "size": "sm",
                  "text": "60 / 100g",
                  "type": "text",
                  "weight": "bold",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            {
              "backgroundColor": "#EDF2F7",
              "contents": [
                {
                  "backgroundColor": "#48BB78",
                  "contents": [
                    {
                      "type": "filler",
                    },
                  ],
                  "cornerRadius": "4px",
                  "height": "8px",
                  "layout": "vertical",
                  "type": "box",
                  "width": "60%",
                },
              ],
              "cornerRadius": "4px",
              "height": "8px",
              "layout": "vertical",
              "margin": "sm",
              "type": "box",
            },
          ],
          "layout": "vertical",
          "margin": "lg",
          "type": "box",
        },
        {
          "contents": [
            {
              "contents": [
                {
                  "color": "#6B7280",
                  "flex": 5,
                  "size": "sm",
                  "text": "脂質 F",
                  "type": "text",
                },
                {
                  "align": "end",
                  "color": "#374151",
                  "flex": 5,
                  "size": "sm",
                  "text": "35 / 67g",
                  "type": "text",
                  "weight": "bold",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            {
              "backgroundColor": "#EDF2F7",
              "contents": [
                {
                  "backgroundColor": "#ECC94B",
                  "contents": [
                    {
                      "type": "filler",
                    },
                  ],
                  "cornerRadius": "4px",
                  "height": "8px",
                  "layout": "vertical",
                  "type": "box",
                  "width": "52%",
                },
              ],
              "cornerRadius": "4px",
              "height": "8px",
              "layout": "vertical",
              "margin": "sm",
              "type": "box",
            },
          ],
          "layout": "vertical",
          "margin": "lg",
          "type": "box",
        },
        {
          "contents": [
            {
              "contents": [
                {
                  "color": "#6B7280",
                  "flex": 5,
                  "size": "sm",
                  "text": "炭水化物 C",
                  "type": "text",
                },
                {
                  "align": "end",
                  "color": "#374151",
                  "flex": 5,
                  "size": "sm",
                  "text": "150 / 250g",
                  "type": "text",
                  "weight": "bold",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            {
              "backgroundColor": "#EDF2F7",
              "contents": [
                {
                  "backgroundColor": "#4299E1",
                  "contents": [
                    {
                      "type": "filler",
                    },
                  ],
                  "cornerRadius": "4px",
                  "height": "8px",
                  "layout": "vertical",
                  "type": "box",
                  "width": "60%",
                },
              ],
              "cornerRadius": "4px",
              "height": "8px",
              "layout": "vertical",
              "margin": "sm",
              "type": "box",
            },
          ],
          "layout": "vertical",
          "margin": "lg",
          "type": "box",
        },
        {
          "margin": "lg",
          "type": "separator",
        },
        {
          "contents": [
            {
              "contents": [
                {
                  "color": "#6B7280",
                  "flex": 5,
                  "size": "xs",
                  "text": "食物繊維",
                  "type": "text",
                },
                {
                  "align": "end",
                  "color": "#374151",
                  "flex": 4,
                  "size": "xs",
                  "text": "8g",
                  "type": "text",
                  "weight": "bold",
                },
              ],
              "flex": 1,
              "layout": "horizontal",
              "type": "box",
            },
            {
              "contents": [
                {
                  "color": "#6B7280",
                  "flex": 5,
                  "size": "xs",
                  "text": "糖質",
                  "type": "text",
                },
                {
                  "align": "end",
                  "color": "#374151",
                  "flex": 4,
                  "size": "xs",
                  "text": "―",
                  "type": "text",
                  "weight": "bold",
                },
              ],
              "flex": 1,
              "layout": "horizontal",
              "type": "box",
            },
          ],
          "layout": "horizontal",
          "margin": "lg",
          "spacing": "lg",
          "type": "box",
        },
        {
          "contents": [
            {
              "contents": [
                {
                  "color": "#6B7280",
                  "flex": 5,
                  "size": "xs",
                  "text": "ナトリウム",
                  "type": "text",
                },
                {
                  "align": "end",
                  "color": "#374151",
                  "flex": 4,
                  "size": "xs",
                  "text": "2100mg",
                  "type": "text",
                  "weight": "bold",
                },
              ],
              "flex": 1,
              "layout": "horizontal",
              "type": "box",
            },
            {
              "contents": [
                {
                  "color": "#6B7280",
                  "flex": 5,
                  "size": "xs",
                  "text": "カリウム",
                  "type": "text",
                },
                {
                  "align": "end",
                  "color": "#374151",
                  "flex": 4,
                  "size": "xs",
                  "text": "―",
                  "type": "text",
                  "weight": "bold",
                },
              ],
              "flex": 1,
              "layout": "horizontal",
              "type": "box",
            },
          ],
          "layout": "horizontal",
          "margin": "md",
          "spacing": "lg",
          "type": "box",
        },
      ],
      "layout": "vertical",
      "type": "box",
    },
    "header": {
      "backgroundColor": "#111827",
      "contents": [
        {
          "color": "#FFFFFF",
          "size": "lg",
          "text": "今日の栄養サマリー📊",
          "type": "text",
          "weight": "bold",
        },
        {
          "color": "#D1D5DB",
          "margin": "sm",
          "size": "sm",
          "text": "2026-07-10・記録3件",
          "type": "text",
        },
      ],
      "layout": "vertical",
      "paddingAll": "16px",
      "type": "box",
    },
    "size": "mega",
    "type": "bubble",
  },
  "type": "flex",
}
`;

exports[`LINE meal Flex templates > builds the edit confirmation card 1`] = `
{
  "altText": "食事記録を削除しますか？",
  "contents": {
    "body": {
      "contents": [
        {
          "size": "md",
          "text": "チョコレート(間食/145kcal)を削除",
          "type": "text",
          "weight": "bold",
          "wrap": true,
        },
        {
          "color": "#6B7280",
          "size": "sm",
          "text": "対象: 1件",
          "type": "text",
        },
        {
          "contents": [
            {
              "color": "#374151",
              "size": "sm",
              "text": "・チョコレート（間食/145kcal）",
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "spacing": "xs",
          "type": "box",
        },
      ],
      "layout": "vertical",
      "spacing": "md",
      "type": "box",
    },
    "footer": {
      "contents": [
        {
          "action": {
            "data": "action=apply_edit&sid=sid-edit",
            "label": "✅ 実行する",
            "type": "postback",
          },
          "color": "#B91C1C",
          "style": "primary",
          "type": "button",
        },
        {
          "action": {
            "data": "action=cancel_edit&sid=sid-edit",
            "label": "❌ やめる",
            "type": "postback",
          },
          "style": "link",
          "type": "button",
        },
      ],
      "layout": "vertical",
      "spacing": "sm",
      "type": "box",
    },
    "header": {
      "backgroundColor": "#B91C1C",
      "contents": [
        {
          "color": "#FFFFFF",
          "size": "lg",
          "text": "本当に削除しますか？",
          "type": "text",
          "weight": "bold",
        },
        {
          "color": "#FEE2E2",
          "margin": "sm",
          "size": "sm",
          "text": "消した記録は戻せないので注意してくださいね⚠️",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "paddingAll": "16px",
      "type": "box",
    },
    "size": "mega",
    "type": "bubble",
  },
  "type": "flex",
}
`;

exports[`LINE meal Flex templates > builds the saved card 1`] = `
{
  "altText": "サラダチキンとおにぎりを記録しました",
  "contents": {
    "body": {
      "contents": [
        {
          "color": "#111827",
          "size": "xl",
          "text": "昼食に記録しました✅",
          "type": "text",
          "weight": "bold",
        },
        {
          "size": "lg",
          "text": "サラダチキンとおにぎり",
          "type": "text",
          "weight": "bold",
          "wrap": true,
        },
        {
          "contents": [
            {
              "color": "#F97316",
              "flex": 2,
              "size": "lg",
              "text": "420 kcal",
              "type": "text",
              "weight": "bold",
            },
            {
              "align": "end",
              "color": "#2563EB",
              "flex": 2,
              "size": "md",
              "text": "Score 8/10",
              "type": "text",
              "weight": "bold",
            },
          ],
          "layout": "horizontal",
          "spacing": "sm",
          "type": "box",
        },
        {
          "margin": "md",
          "type": "separator",
        },
        {
          "color": "#374151",
          "size": "sm",
          "text": "いい感じ！でも野菜も足したいね✨",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "spacing": "md",
      "type": "box",
    },
    "size": "mega",
    "type": "bubble",
  },
  "type": "flex",
}
`;
